# rapid-dir-perms

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
rapid_dir_perms/: __init__.py  core.py
tests/: test_rapid_dir_perms.py
